manifests/argocd/apps/kube-prometheus/base/apps/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "111"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.janz.digital/oauth2/start?rd=https://$best_http_host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.janz.digital/oauth2/auth
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.apps.titan.janz.digital
      http:
        paths:
          - backend:
              service:
                name: monitoring-prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix

  tls:
    - hosts:
        - prometheus.apps.titan.janz.digital
